--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="#121212">
   <meta name="apple-mobile-web-app-title" content="Manga Reader">
-  <meta name="msapplication-TileImage" content="img/book_400.png">
+  <meta name="msapplication-TileImage" content="./img/book_400.png">
   <meta name="msapplication-TileColor" content="#000">
 
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="manifest.json">
 
   <title>Choose a Manga</title>
 </head>
