--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<link rel="apple-touch-icon" href="img/book_400.png" />
+		<link rel="apple-touch-icon" href="img/book_128.ico" />
 		<link rel="shortcut icon" href="img/book_128.png" type="image/png" />
 		<meta name="description" content="Elias' manga reader" />
 		<meta name="theme-color" content="#121212" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="#121212" />
 		<meta name="apple-mobile-web-app-title" content="Manga Reader" />
-		<meta name="msapplication-TileImage" content="./img/book_400.png" />
+		<meta name="msapplication-TileImage" content="img/book_400.png" />
 		<meta name="msapplication-TileColor" content="#000" />
 
 		<link rel="manifest" href="manifest.json" />
