--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
 		<link rel="apple-touch-icon" href="img/book_128.ico" />
 		<link rel="shortcut icon" href="img/book_128.png" type="image/png" />
-		<meta name="description" content="Elias' manga reader" />
+		<meta name="description" content="Manga reader" />
 		<meta name="theme-color" content="#121212" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="#121212" />
@@ -16,8 +16,6 @@
 		<meta name="msapplication-TileColor" content="#000" />
 
 		<link rel="manifest" href="manifest.json" />
-
-		<title>Choose a Manga</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
