Bug fixes + Head component

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,24 +5,25 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<!-- <link rel="apple-touch-icon" href="img/book_128.ico" />
-		<link rel="shortcut icon" href="img/book_128.png" type="image/png" /> -->
+		<link rel="apple-touch-icon" href="/img/book_128.ico" />
+		<link rel="shortcut icon" href="/img/book_128.png" type="image/png" />
 		<link
 			rel="apple-touch-startup-image"
-			href="img/rikka_square512.png"
+			href="/img/rikka_square512.png"
 			type="image/png"
 		/>
-		<link rel="shortcut icon" href="" type="image/ico" />
 
 		<meta name="description" content="Manga reader" />
-		<meta name="theme-color" content="#2596be" />
+		<!-- <meta name="theme-color" content="#2596be" /> -->
+		<meta name="theme-color" content="#121212" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="#121212" />
 		<meta name="apple-mobile-web-app-title" content="Manga Reader" />
-		<!-- <meta name="msapplication-TileImage" content="img/book_400.png" /> -->
+		<meta name="msapplication-TileImage" content="/img/book_400.png" />
 		<meta name="msapplication-TileColor" content="#000" />
 
-		<link rel="manifest" href="manifest.json" />
+		<link rel="manifest" href="/manifest.json" />
+		<title></title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
