Fixing mobile display:standalone

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Manga reader" />
 
-		<!-- <meta name="theme-color" content="#2596be" /> -->
-		<meta name="theme-color" content="#121212" />
+		<meta name="theme-color" content="#2596be" />
+		<!-- <meta name="theme-color" content="#121212" /> -->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="#121212" />
 		<meta name="apple-mobile-web-app-title" content="Manga Reader" />
