--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,8 @@
 
 		<title></title>
 
+		<link rel="manifest" href="manifest.json" />
+
 		<link
 			rel="apple-touch-startup-image"
 			href="appIcons/apple-splash-2048-2732.jpg"
