--- a/client/public/index.html
+++ b/client/public/index.html
@@ -86,6 +86,11 @@
 			rel="stylesheet"
 			href="https://unpkg.com/nprogress@0.2.0/nprogress.css"
 		/>
+
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
